--- a/16-deployment.yaml
+++ b/16-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
+  name: ngi
   # labels of deployment resource
   labels:
     app: nginx
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: joindevops/deployment:2.0
+        image: joindevops/nginx:1.0
         ports:
         - containerPort: 80
 ---
@@ -41,5 +41,4 @@ spec:
   - protocol: TCP
     port: 80 # service port
     targetPort: 80
-    nodePort: 30007
-    
+    nodePort: 30008
