--- a/16-deployment.yaml
+++ b/16-deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: joindevops/deployment:1.0
+        image: nginx
         ports:
         - containerPort: 80
 ---
