--- a/volumes/02-ebs-static.pvc.yaml
+++ b/volumes/02-ebs-static.pvc.yaml
@@ -11,7 +11,7 @@ spec:
   resources:
     requests:
       storage: 20Gi
-
+---
 apiVersion: v1
 kind: Pod
 metadata:
@@ -31,3 +31,18 @@ spec:
   - name: persistent-storage
     persistentVolumeClaim:
       claimName: ebs-static
+
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: nginx-lb
+spec:
+  type: LoadBalancer
+  selector: # labels are used as selectors
+    purpose: "ebs-static-demo"
+  ports:
+  - protocol: TCP
+    port: 80 # service port
+    targetPort: 80
+    nodePort: 30008
