--- a/volumes/01-ebs-static-pv.yaml
+++ b/volumes/01-ebs-static-pv.yaml
@@ -7,7 +7,7 @@ spec:
   - ReadWriteOnce
   capacity:
     storage: 3Gi
-  csi:
-    driver: ebs.csi.aws.com
+  persistentVolumeReclaimPolicy: Recycle
+  awsElasticBlockStore:  
     fsType: ext4
     volumeHandle: vol-0a718077a631e9292
