--- a/volumes/01-ebs-static-pv.yaml
+++ b/volumes/01-ebs-static-pv.yaml
@@ -7,7 +7,7 @@ spec:
   - ReadWriteOnce
   capacity:
     storage: 3Gi
-  persistentVolumeReclaimPolicy: Recycle
-  awsElasticBlockStore:  
+  csi:
+    driver: ebs.csi.aws.com
     fsType: ext4
     volumeHandle: vol-0a718077a631e9292
